@@ -23,6 +23,7 @@ public:
 	const int border_x, border_y;
 	const SDL_Color background_color, bright_color;
 	const uint32_t blink_speed, flashing_speed;
+	bool audio_active;
 	string CurrentEncoding;
 
 private:
