@@ -11,8 +11,11 @@ Use a terminal in style, like in the good old days!
 is a terminal emulator that simulates the looks of a 1980s monitor.
 .SH OPTIONS
 .TP 6
-.BI \-s " scale" "=SCALE"
+.BI \-s, " "\-\-scale "=SCALE"
 zoom the image by SCALE (default=1)
+.TP 
+.BI \-a, " "\-\-no-audio
+disable audible beep
 .TP 
 .BI \-\-version
 display version information and exit
